RESOLVED FIXED 264467
SharedVideoFrameReader does not need to create a default IPC::Semaphore
https://bugs.webkit.org/show_bug.cgi?id=264467
Summary SharedVideoFrameReader does not need to create a default IPC::Semaphore
youenn fablet
Reported 2023-11-08 23:21:31 PST
SharedVideoFrameReader does not need to create a default IPC::Semaphore
Attachments
Radar WebKit Bug Importer
Comment 1 2023-11-08 23:21:58 PST
youenn fablet
Comment 2 2023-11-09 06:51:56 PST
EWS
Comment 3 2023-11-10 08:00:57 PST
Committed 270533@main (d891c0e48c74): <https://commits.webkit.org/270533@main> Reviewed commits have been landed. Closing PR #20226 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.