SharedVideoFrameReader does not need to create a default IPC::Semaphore https://bugs.webkit.org/show_bug.cgi?id=264467 rdar://118160442

Reviewed by Chris Dumez.

Creating a default IPC::Semaphore is costly.
Given SharedVideoFrameReader will never use its default IPC::Semaphore (it should use the one created from writer side),
we move m_semaphore to std::optional<IPC::Semaphore> to make the SharedVideoFrameReader constructor less expensive.

* Source/WebKit/WebProcess/GPU/webrtc/SharedVideoFrame.cpp:
(WebKit::SharedVideoFrameReader::readBufferFromSharedMemory):
* Source/WebKit/WebProcess/GPU/webrtc/SharedVideoFrame.h:

Canonical link: https://commits.webkit.org/270533@main